backend/feat: type crud
